fix(bugs): 🐛 invite issue, icon picker overflow, fetch collections payload (#197)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,14 +56,6 @@ main {
 	@apply mb-[30px] bg-gray-100;
 }
 
-/* for side pane options menu being cut after it passed side pane width */
-
-/* .allotment-module_splitView__L-yRc
-	> .allotment-module_split-view-container__rQnVa
-	> .allotment-module_splitViewView__MGZ6O {
-	overflow: unset !important;
-} */
-
 .sash-module_sash__K-9lB::before {
 	background: unset !important;
 }
@@ -345,7 +337,7 @@ input[type="checkbox"]:checked + .checkbox-div {
 /* for side pane resizer animation */
 .split-view .sash-vertical {
 	/* adding important as some styles get getting overridden by lib */
-	@apply z-[999] ml-[5px] w-[20px] -translate-x-2/4  hover:cursor-grab active:cursor-grabbing !important;
+	@apply z-10 ml-[5px] w-[20px] -translate-x-2/4  hover:cursor-grab active:cursor-grabbing !important;
 
 	/* for the drag handle to be in sync when side pane size when resizing */
 	transition: all 0.15s ease-in-out;
